--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
           go-version: 1.19
 
       - name: Run test
-        run: go test ./...
+        run: go test -v ./...
 
       - name: Run vet
         run: go vet ./...
